# technical-portfolio

./: README.md
AI-Prototypes/: LSST-Alert-QA  README.md
Bash/: README.md  backup_project.sh  bak_pj.sh  count_errors.sh  portfolio_allinone.sh
LSST-Alert-QA/: .gitignore  CLAUDE.md  README.md  antares_sso_monitor.py  pipeline.py  pyproject.toml  sso_monitor.py
LSST-Alert-QA/src/alerce_qa/: __main__.py  classifier.py  config.py  profiler.py  reporting.py  validators.py
LSST-Alert-QA/src/rubin_qa/: __init__.py  __main__.py  antares_client.py  classifier.py  client.py  reporting.py  validators.py
LSST-Alert-QA/systemd/: README.md  sso-monitor.service.example  sso-monitor.timer.example
LSST-Alert-QA/tests/: conftest.py  test_classifier.py  test_client.py  test_reporting.py  test_validators.py
Linux/: README.md  clr_white.py  eu_date.py  mass-camera-tidy.py  md2pdf.sh  re_index.py  san.py  sanitize_names.py
Python/: README.md  README_python.md  a.py  atom_write.py  chess_valid_checker.py  clr_white.py  coin_toss_guess.py  collatz.py  config_update.py  copy_tree.py  cp_ext.py  date.py  datefix.py  dir_stats.py  domain_extracter.py  eu_date.py  find_large.py  hash_out.py  inventory.py  ip_finder.py  is_phone.py  leer_dir.py  log.py  log_liner.py  log_reader.py  madLibs.py  mask.py  my_cp.py  my_mv.py  pyfiles_walk.py  re_index.py  rpt_words.py  streak_chance..py  streak_chance.py  strip_reg.py  tab_printer.py
QA_Automation/: README.md  net_check.py
Test-Automation/: README.md  README_test.md  log_scan.py
health-checker/: README.md  common.py  hosts.txt  (+5 more)
(+19 files in other folders)
