[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubin-qa"
version = "0.1.0"
description = "LSST/ZTF/ANTARES Alert Data Quality Pipeline"
requires-python = ">=3.13"
dependencies = [
    "alerce",
    "antares-client",
    "elasticsearch-dsl>=8.18.0",
    "pandas",
]

[project.scripts]
rubin-qa = "rubin_qa.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rubin_qa"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "network: marks tests requiring network access",
    "integration: marks integration tests",
]
